--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
+    "sass": "^1.50.1",
     "slick-carousel": "^1.8.1",
+    "swiper": "^8.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
