--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "react": "^17.0.0",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
