--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "react": "^17.0.0",
     "react-bootstrap": "^2.3.0",
     "react-dom": "^17.0.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.50.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.1.3",
