--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
+    "react-toastify": "^9.0.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.50.1",
