--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sass": "^1.50.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.1.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
